--- a/roles/hadoop_common/vars/main.yml
+++ b/roles/hadoop_common/vars/main.yml
@@ -16,18 +16,18 @@ hdfs_defaultFS_port: 8020
 
 dfs_permissions_superusergroup: "{{ hdfsuser }}"
 dfs_namenode_name_dir: 
-  - /namedir1/
-  - /namedir2/
+  - /data/hadoop/hdfs/name
+  - /hadoop/hdfs/name
 dfs_replication: 3
 dfs_blocksize: 134217728
 dfs_datanode_data_dir:
-  - /datadir1/
-  - /datadir2/
+  - /data/hadoop/hdfs/data
+  - /hadoop/hdfs/data
 
 #Variables for <mapred-site_xml>     
 mapred_job_tracker_host: "{{ master_hostname }}"
 mapred_job_tracker_port: 8021
 
 mapred_local_dir:
-  - /mapred1/
-  - /mapred2/
+  - /data/hadoop/mapred
+  - /hadoop/mapred
