--- a/roles/spark_standalone/vars/main.yml
+++ b/roles/spark_standalone/vars/main.yml
@@ -1,11 +1,13 @@
 ---
 #spark_version: "0.9.2-bin-hadoop2"
-spark_version: "1.2.0-bin-hadoop2.4"
+spark_version: "1.3.0-bin-hadoop2.4"
 spark_download_url: "http://d3kbcqa49mib13.cloudfront.net/spark-{{ spark_version }}.tgz"
 
 spark_root: "/opt/spark"
 spark_master_host: "{{ master_hostname }}"
 spark_master_port: 7077
+spark_master_ui_port: 8081
+zk_port: 2181
 
 # memory per executor, increase if see java out-of-memory exceptions in spark shell
 spark_executor_memory: "{{ (ansible_memtotal_mb * 0.6)|round|int }}m"
