--- a/roles/tachyon/vars/main.yml
+++ b/roles/tachyon/vars/main.yml
@@ -3,8 +3,8 @@
 # pre-built tachyon does not work with CDH5
 # tachyon_download_url: "http://tachyon-project.org/downloads/tachyon-0.5.0-bin.tar.gz"
 # download custom built tachyon from SL swift
-tachyon_version: "0.5.0-cdh5"
-tachyon_download_url: "https://sjc01.objectstorage.softlayer.net/v1/AUTH_c10e0c71-4804-4b95-a3a2-37584d559fca/bdas/tachyon-0.5.0-cdh5.tar.gz"
+tachyon_version: "0.6.3-cdh5"
+tachyon_download_url: "https://www.googledrive.com/host/0B8_rjpVkVjwSfmxSdlRhQjdWR1JaeVgxWXlkVDNqZWthdUlkek1BbUJQRlRGM29WZGgzQmM/tachyon-0.6.3-cdh5.tar.gz"
 tachyon_archive_name: "tachyon-{{ tachyon_version }}.tgz"
 tachyon_root: "/opt/tachyon"
 tachyon_master_host: "{{ master_hostname }}"
