--- a/group_vars/components.yml
+++ b/group_vars/components.yml
@@ -3,6 +3,7 @@ install_mesos: false
 install_mpi: false
 install_mapred: false
 install_hive: false
-install_tachyon: true
+install_tachyon: false
 install_cassandra: false
-install_spark_mesos_override: true
+install_spark_mesos_override: false
+install_star: false
